style: fix visual bug when select is too wide

--- a/src/scss/shared/selects.scss
+++ b/src/scss/shared/selects.scss
@@ -1,20 +1,26 @@
 $arrow_offset: 11px;
 $separator_offset: 7px;
 
-.input_item select.input {
-    /* stylelint-disable-next-line property-no-vendor-prefix */
-    -webkit-appearance: none;
-    /* stylelint-disable-next-line property-no-vendor-prefix */
-    -moz-appearance: none;
-    background-position:
-        calc(100% - 16px) $arrow_offset,
-        calc(100% - 10px) $arrow_offset,
-        calc(100% - 33px) $separator_offset;
-    background-size:
-        6px 6px,
-        6px 6px,
-        1px 14px;
-    background-repeat: no-repeat;
-    padding-right: 44px;
-    line-height: $input_height; /* Fix text being cut from the bottom of selects. */
+.input_item {
+    select {
+        max-width: 100%;
+
+        &.input {
+            /* stylelint-disable-next-line property-no-vendor-prefix */
+            -webkit-appearance: none;
+            /* stylelint-disable-next-line property-no-vendor-prefix */
+            -moz-appearance: none;
+            background-position:
+                calc(100% - 16px) $arrow_offset,
+                calc(100% - 10px) $arrow_offset,
+                calc(100% - 33px) $separator_offset;
+            background-size:
+                6px 6px,
+                6px 6px,
+                1px 14px;
+            background-repeat: no-repeat;
+            padding-right: 44px;
+            line-height: $input_height; /* Fix text being cut from the bottom of selects. */
+        }
+    }
 }
